--- a/RazorPagesMovies/RazorPagesMovies/Pages/Movies/Details.cshtml
+++ b/RazorPagesMovies/RazorPagesMovies/Pages/Movies/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Movie.Price)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Movie.Price)
+            @Html.DisplayFor(model => model.Movie.Rating)
         </dd>
     </dl>
 </div>
