--- a/RazorPagesMovies/RazorPagesMovies/Pages/Movies/Details.cshtml
+++ b/RazorPagesMovies/RazorPagesMovies/Pages/Movies/Details.cshtml
@@ -33,6 +33,12 @@
             @Html.DisplayNameFor(model => model.Movie.Price)
         </dt>
         <dd>
+            @Html.DisplayFor(model => model.Movie.Price)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Movie.Rating)
+        </dt>
+        <dd>
             @Html.DisplayFor(model => model.Movie.Rating)
         </dd>
     </dl>
